--- a/src/styles.css
+++ b/src/styles.css
@@ -1,3 +1,17 @@
-.enroll-list strong {
+.enroll-form {
+    padding: 50px;
+}
+
+.enroll-form-title {
     display: inline-block;
+}
+
+.enroll-form .uk-list {
+    margin-bottom: 50px;
+}
+.enroll-list {
+    padding: 50px;
+}
+.uk-button-small {
+    white-space: nowrap;
 }
